Fix selector-pseudo-element-colon-notation and spacing

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,10 @@
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+
+*, 
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
